# table-rdf

./: .gitattributes  CMakeLists.txt  CMakePresets.json  NOTES.md  README.md  publish.sh  table-rdf-config.cmake  table-rdf.tar.gz.sha512sum  vcpkg.json
include/table-rdf/: common.h  descriptor.h  descriptor.tpp  field.h  field.tpp  field_traits.h  fields_builder.h  log.h  rdf.h  record.h  traits.h  type_traits.h  types.h  util.h
rdf/: CMakeLists.txt
snippets/: csv_record.h  record_concept.h  type_traits.h  view_add_constant.cpp
src/: log.h
test/: test_core.cpp  test_main.cpp  test_performance.cpp
